Fix form alignment on signup page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -718,7 +718,7 @@ footer {
 
 @media screen and (min-width: 2560px) {
 
-    .logo > img {
+    .logo>img {
         height: 50px;
         width: auto;
         object-fit: contain;
@@ -726,7 +726,7 @@ footer {
         padding-left: 8px;
         max-inline-size: 100%;
     }
-        
+
     h1 {
         font-size: 4rem;
     }
@@ -837,14 +837,15 @@ footer {
     #video-tour {
         height: 500px;
     }
+
     #club-times-title {
-        font-size: 6rem ;
+        font-size: 6rem;
     }
 
     #times {
         font-size: 4rem;
         border-radius: 4px;
-           }
+    }
 
     .contact {
         font-size: 3rem;
@@ -1026,12 +1027,6 @@ details[open] div {
     width: 100%;
 }
 
-text-align: center;
-color: #f5deb3;
-text-shadow: 2px 2px black;
-background-color: #503A26;
-}
-
 #form-info {
     background-color: #3B5822;
 }
@@ -1136,7 +1131,6 @@ input[type=email] {
     box-sizing: border-box;
 }
 
-
 input[label] {
     width: 60%;
     padding: 12px 20px;
@@ -1184,6 +1178,10 @@ padding: 8px;
     padding: 10px 0;
     line-height: 1.8rem;
 }
+
+/* label {
+    width: 50%;
+} */
 
 #submit {
     margin: auto;
@@ -1255,7 +1253,7 @@ td {
 }
 
 @media screen and (min-width: 375px) {
-    
+
     h1 {
         font-size: 1.5rem;
     }
@@ -1266,7 +1264,7 @@ td {
 }
 
 @media screen and (min-width: 425px) {
-    
+
     h1 {
         font-size: 1.6rem;
     }
@@ -1275,9 +1273,9 @@ td {
         font-size: 1.2rem;
     }
 
-.logo {
-    padding-left: 8px;
-}
+    .logo {
+        padding-left: 8px;
+    }
 
     #signup-hero-title {
         font-size: 2.4rem;
@@ -1337,16 +1335,23 @@ td {
     }
 
     #form {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         font-size: 1.8em;
-        text-align: end;
+        text-align: start;
         line-height: 3.6rem;
+        margin: 6px ;
     }
 
-    
     .club-times {
         margin: 1rem 7rem;
     }
 
+    label {
+        width: 48%;
+    }
+    
     .join {
         box-sizing: border-box;
         font-size: 2rem;
@@ -1387,6 +1392,8 @@ td {
     #form {
         font-size: 1.8rem;
         line-height: 2.8rem;
+        row-gap: 2rem;
+        margin: 10px;
     }
 
     input[type=text] {
@@ -1406,9 +1413,10 @@ td {
         width: 100%;
     }
 
-    .join>label {
-        font-size: 1.8rem;
+    label {
+        font-size: 2.2rem;
         line-height: 40px;
+        width: 50%;
     }
 
     .join-button {
@@ -1434,8 +1442,9 @@ td {
     }
 
     #form {
-        font-size: 2.4rem;
+        font-size: 3rem;
         line-height: 2.4rem;
+        margin: 1rem 5rem;
     }
 
     .form-section h3 {
@@ -1451,9 +1460,10 @@ td {
     input[type=email] {
         width: 45%;
     }
-.club-times {
-    margin: 1rem 10rem;
-}
+
+    .club-times {
+        margin: 1rem 10rem;
+    }
 
     .join {
         font-size: 2.4rem;
